# deconvoluting_low_yield

./: LICENSE  README.md  environment.yml  pyproject.toml
data/: enamine_primary_and_secondary_amines.csv
data/predictions/: best_amides.csv  false_negatives.csv  gp_predictions.csv  rf_predictions.csv  top_20.csv
data/processed/: activities_and_yield.csv
data/raw/: CDD Excel Export - 2022-08-18 12h31m51s.xlsx  CDD Excel Export - 2022-09-04 02h33m07s.xlsx  CDD Excel Export - 2022-09-07 03h27m51s.xlsx  CDD Excel Export - 2022-11-15 21h48m35s.xlsx  activity.csv  grid.csv  raw.csv  yield.csv
notebooks/: enumerate_amides.ipynb  enumerated_amide_predictions.ipynb  examine_cdd_data.ipynb  examine_loo.ipynb  examine_prospective_measurements.ipynb  examine_scored_amides.ipynb  model_metrics.ipynb  model_metrics.xlsx  pred_vs_yields.ipynb  visualise_new_yields.ipynb
scripts/: gp.py  rf.py  score_amides.py
